--- a/src/main/webapp/shop/order/new/views/orderForm.ejs
+++ b/src/main/webapp/shop/order/new/views/orderForm.ejs
@@ -1,6 +1,6 @@
 <% var article = this.article %>
 <% var user = this.customer %>
-<% var deliveryLocation = this.deliveryLocation || this.deliveryLocations[ 0 ] %>
+<% var deliveryLocation = this.deliveryLocation %>
 <% var deliveryLocations = this.deliveryLocations %>
 
 <% if ( user ) { %>
@@ -27,13 +27,17 @@
 	</div>
 	<div class="input-form-row">
 		<label><%= msg( "order.detail.deliveryLocation" ) %>:</label>
-
 		<select id="deliveryLocationsSelect">
+			<option value="-1"></option> 
 		<% for ( var i = 0; i < deliveryLocations.length; i++ ) { %>
 			<option value="<%= deliveryLocations[ i ].id %>" 
-				<%= (deliveryLocation.id == deliveryLocations[ i ].id) ? "selected" : "" %> ><%= deliveryLocations[ i ].name %></option>
+				<%= (deliveryLocation && deliveryLocation.id == deliveryLocations[ i ].id) ? "selected" : "" %> ><%= deliveryLocations[ i ].name %></option>
 		<% } %>
 		</select>
+		<div id="setDdlDiv" style="display : none;">
+			<input id="setDefaultDeliveryLocation" type="checkbox">
+			<%= msg( "order.detail.setDefaultDeliveryLocation" ) %>
+		</div>
 	</div>
 
 	<div class="input-form-row">
