--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -306,18 +306,23 @@ li.category {
 	================================================= 
 */
 
-
-a.meal {
+#menuDiv {
+	width : 100%;
+	border : 0px red solid;
 }
 
 #menuTable {
 	table-layout : fixed;
 	border-collapse : collapse;
-	width : 100%;
+	width : 80%;
+	border : 0px black solid;
+	margin-left : 80px;
 }
 
 #menuTable td {
+	text-align: left;
 	border : 0px #eeeeee solid;
+	font: Arial; 
 }
 
 #menuTable tr.headerRow td{
@@ -325,15 +330,58 @@ a.meal {
 
 #menuTable td.categoryCell {
 	//width : 100%;
-	font-size : 1.5em;
-	font-weight : bold;
-	padding-top : 20px;
+	font-size : 1.2em;
+	Xfont-weight : bold;
+	padding : 20px 0px 10px 0px;
 }
 
 #menuTable td.articleCell {
 	width : *;
+	padding-left : 50px;
+	white-space: nowrap;
+	padding-top : .5em;
+	padding-bottom : .5em;
+}
+
+#menuTable div.meal-header {
+	display : block;
+	clear : both;
+}
+
+#menuTable a.meal {
+	color : black;
+	Xfont-weight: bold;
+}
+
+#menuTable a.meal-sold-out {
+	Xtext-decoration: line-through;
+	Xcolor : lightgray;
+}
+
+#menuTable span.meal-sold-out-label {
+	font-size : .8em;
+	font-style : italic; 
+	color : red;
+}
+
+#menuTable div.meal-description {
+	font-style : italic;
+	font-size : 0.8em;
+	color : #9C822D;
+	width : 100%;
+	overflow : hidden;
+	float : left;
+}
+
+#menuTable span.meal-padding {
+	color : gray;
+	font-size : .5em;
 }
 
 #menuTable td.priceCell {
+	vertical-align : bottom;
 	width : 100px;
+	padding-left : 5px;
+	padding-top : .5em;
+	padding-bottom : .7em;
 }
