--- a/src/main/resources/META-INF/velocity/menuMailTemplate.css
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.css
@@ -48,8 +48,8 @@
 				padding-left : 10px;
 			}
 
-			table.menuTable td.CounterCell {
-				width : 30px;
+			table.menuTable td.codeCell {
+				width : 40px;
 				padding-left : 10px;
 			}
 
