--- a/src/main/webapp/backoffice/backoffice.css
+++ b/src/main/webapp/backoffice/backoffice.css
@@ -335,31 +335,61 @@ input[type=text], input[type=password] {
 
 #menuTable td {
 	text-align: left;
+	vertical-align : top;
+	padding-left : 5px;
+	padding-top : .5em;
+	padding-bottom : .5em;
 	border : 0px #eeeeee solid;
 	font: Arial; 
 }
 
 #menuTable tr.headerRow td{
+	height : 0px;
+	padding : 0;
+}
+
+/* Category Row */
+
+#menuTable tr.categoryRow td{
 }
 
 #menuTable td.categoryCell {
-	//width : 100%;
-	font-size : 1.2em;
-	Xfont-weight : bold;
-	padding : 20px 0px 10px 0px;
+	font-size : 1.5em;
+	padding-top : 40px;
 }
 
 #menuTable td.categoryCell a.createArticleLink {
 	font-size : 10pt;
 	color : blue;
 }
+/* End Category Row */
+
+
+/* Article Row */
+
+#menuTable tr.articleRow td {
+	border-top : 1px lightgray solid;
+}
+
+#menuTable tr.active {
+	Xborder-left : green 5px solid;
+	background-color : #fff0ff;
+}
+
+#menuTable tr.inactive {
+	color : lightgray;
+}
+
+
+#menuTable td.codeCell {
+	width : 50px;
+	font-style : italic;
+	color : gray;
+}
 
 #menuTable td.articleCell {
 	width : *;
-	padding-left : 50px;
 	white-space: nowrap;
-	padding-top : .5em;
-	padding-bottom : .5em;
 }
 
 #menuTable td.articleCell div.meal-header {
@@ -369,13 +399,10 @@ input[type=text], input[type=password] {
 
 #menuTable td.articleCell a.meal {
 	color : black;
-	Xfont-weight: bold;
 }
 
 
 #menuTable a.meal-sold-out {
-	Xtext-decoration: line-through;
-	Xcolor : lightgray;
 }
 
 #menuTable span.meal-sold-out-label {
@@ -393,7 +420,7 @@ input[type=text], input[type=password] {
 #menuTable div.meal-description {
 	font-style : italic;
 	font-size : 0.8em;
-	color : #9C822D;
+	Xcolor : #9C822D;
 	width : 100%;
 	overflow : hidden;
 	float : left;
@@ -405,18 +432,18 @@ input[type=text], input[type=password] {
 }
 
 #menuTable td.priceCell {
-	vertical-align : top;
-	width : 100px;
-	padding-left : 5px;
-	padding-top : .5em;
+	width : 50px;
 }
 
-#menuTable td.actionsCell {
-	vertical-align : top;
-	width : 200px;
-	padding-top : .5em;
-	border : 0px red solid;
+#menuTable td.limitCell {
+	width : 50px;
 }
+
+
+#menuTable td.actionsCell {
+	width : 100px;
+}
+
 
 #menuTable td.actionsCell a {
 	font-size : 0.8em;
@@ -430,3 +457,4 @@ input[type=text], input[type=password] {
 	border : 1px blue solid;
 	margin : 0px;
 }
+/* End Article Row */
