--- a/src/main/webapp/common/register_customer/views/customerForm.ejs
+++ b/src/main/webapp/common/register_customer/views/customerForm.ejs
@@ -1,6 +1,6 @@
 <% var deliveryLocations = this.deliveryLocations %>
 <% var user = this.customer %>
-<% var ddl = user.defaultDeliveryLocation.id %>
+<% var ddl = user.defaultDeliveryLocation %>
 <% var firstNameId = "reg_firstName" %>
 <% var lastNameId = "reg_lastName" %>
 <% var emailId = "reg_email" %>
@@ -29,8 +29,9 @@
 		<label for="<%= ddlId %>"><%= msg( "customer.registration.ddl" ) %>:</label>
 	
 		<select name="defaultDeliveryLocationId" id="<%= ddlId %>">
+			<option value="-1"></option> 
 		<% for ( var i = 0; i < deliveryLocations.length; i++ ) { %>
-			<option value="<%= deliveryLocations[ i ].id %>" <%= deliveryLocations[ i ].id == ddl ? "selected='selected'" : "" %>>
+			<option value="<%= deliveryLocations[ i ].id %>" <%= ddl && deliveryLocations[ i ].id == ddl.id ? "selected='selected'" : "" %>>
 				<%= deliveryLocations[ i ].name %>
 			</option>
 		<% } %>
