--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -11,7 +11,6 @@ h1 {
 	margin: 0;
 	line-height: 30px;
 	color: #c84;
-	text-align: center;
 }
 
 h2 {
@@ -20,7 +19,6 @@ h2 {
 
 h3 {
 	margin-top: 0;
-	text-align: center;
 }
 
 h2 em,h3 em {
@@ -362,3 +360,25 @@ li.category {
 	padding-bottom : .7em;
 }
 
+/** Contacts **/
+#contacts {
+	width : 100%;
+	border : 0px black solid;
+}
+
+#contacts h3{
+	border-bottom : 1px lightgray solid;
+}
+
+#contacts td {
+	vertical-align: top;
+}
+
+#contacts-left {
+	border : 0px blue solid;
+	padding-right : 20px;
+}
+
+#contacts-right {
+	border : 0px red solid;
+}
